# chrppi

./: .gitmodules  README.md  TODO.md
app/: .env  .gitignore  CMakeLists.txt  build.sh  execute.sh  launch.sh  run.sh
app/chr_examples/: gcd.txt
app/chr_spaces/: space.cpp
app/chr_spaces/examples/: acker.txt  bool.txt  fib.txt  primes.txt  tak.txt
app/conan/: build.sh  file.txt  profile.txt
app/document_root/js/: ajax.js  id.js  main.js  utils.js
app/exemple_chr/: exemple1.txt
app/source/: config.hh  embed_cling.cpp  file_upload.cc  main.cpp
app/source/controllers/: Download.cpp  Download.hh  Index.cpp  Index.hh
app/source/interpreter/: interpreter.cpp  interpreter.hh
app/source/utils/: utils.hh
app/source/views/: FileUpload.csp  index_exmple.csp  index_view.csp
app/source/views/bulma_docs/: exemple1.html
app/static_files/bash/: chrppi.bash
app/static_files/css/: debug.css  main.css
app/static_files/scripts/: main.js
app/uploads/: CMakeLists.txt
env/: .env  Containerfile  Dockerfile  build.sh  clean.sh  inspect.sh  inspect_app.sh  run.sh  run_app.sh  run_inspect.sh
env/setup/: packages.sh  user.sh  utilities.sh
env/setup/include/utilities/: prompt.sh
test/: load.js  load.sh  package-lock.json  package.json
